# internal/views/car.go
@@ -10,9 +10,10 @@ type CarDetailView struct {
 }
 
 type CarListView struct {
-	ID       string `json:"id,omitempty"`
-	Title    string `json:"title,omitempty"`
-	Plate    string `json:"plate,omitempty"`
-	IsActive bool   `json:"is_active,omitempty"`
-	ClientID string `json:"client_id,omitempty"`
+	ID             string `json:"id,omitempty"`
+	Title          string `json:"title,omitempty"`
+	Plate          string `json:"plate,omitempty"`
+	IsActive       bool   `json:"is_active,omitempty"`
+	ClientFullName string `json:"client_full_name,omitempty"`
+	ClientID       string `json:"client_id,omitempty"`
 }
