# internal/views/parking_place.go
@@ -13,4 +13,5 @@ type ParkingPlaceListView struct {
 	Number           string `json:"number,omitempty"`
 	IsBusy           bool   `json:"is_busy,omitempty"`
 	ParkingZoneTitle string `json:"parking_zone_title,omitempty"`
+	ParkingZoneID    string `json:"parking_zone_id,omitempty"`
 }
